--- a/src/app/course-general/create-course/create-course.component.html
+++ b/src/app/course-general/create-course/create-course.component.html
@@ -41,6 +41,8 @@
                     <label for="dificuldade">Dificuldade</label>
                     <select type="text" [(ngModel)]="course.sDifCou" (change)="onChangeCategorySelect($event)" name="course.sDifCou" class="form-control" required>
                             <option value="1" >Iniciante</option>
+                            <option value="1" >Iniciante Jorge</option>
+                            <option value="1" >Iniciante Test</option>
                             <option value="2" >Intermediario</option>
                             <option value="3" >Avançado</option>
                         </select>
