--- a/src/app/course-general/list-course/list-course.component.html
+++ b/src/app/course-general/list-course/list-course.component.html
@@ -12,35 +12,13 @@
     <form class="course-search">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <input id="search-1" type="text" class="form-control" placeholder="Start typing...">
+                <div class="col-12 input-group input-group-transparent">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-search fa-2x pr-2"></i>
+                        </span>
                     </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <select class="form-control">
-                            <option>1 year</option>
-                            <option>2 years</option>
-                            <option>4 years</option>
-                            <option>6 years</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <select class="form-control">
-                            <option>Ontario</option>
-                            <option>London</option>
-                            <option>New York</option>
-                            <option>Amsterdam</option>
-                        </select>
-                    </div>
-                </div>                    
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-search"></i> Search</button>
-                    </div>
+                    <input type="text" class="form-control" id="search-1" name="search" [(ngModel)]="searchTerm" type="text" placeholder="Start typing..." />
                 </div>
             </div>
         </div>
@@ -49,54 +27,57 @@
 
 <section class="container mt-100 mb-100">
     <div class="row">
-            <div class="col-lg-4">
-                    <div class="card course-card new">
-                        <div class="course-head">
-                            <img src="../assets/resources/images/course-grid-1.jpg" class="img-fluid course-img" alt="">
-                            <a href="course-detail.html" class="course-link"><i class="fa fa-link" aria-hidden="true"></i></a>
-                        </div>
-                        <div class="course-detail">
-                            <h4 class="heading">Diploma in Marketing</h4>
-                            <span class="brief">In this course, you learn all advanced techniques and methodologies.</span>
-                            <ul class="course-features">
-                                <li><i class="fa fa-map-marker"></i> California</li>
-                                <li><i class="fa fa-clock-o"></i> 1 year</li>
-                            </ul>
-                        </div>
-                    </div>
+        <div class="col-lg-4">
+            <div class="card course-card new">
+                <div class="course-head">
+                    <img src="../assets/resources/images/course-grid-1.jpg" class="img-fluid course-img" alt="">
+                    <a href="course-detail.html" class="course-link"><i class="fa fa-link" aria-hidden="true"></i></a>
                 </div>
-                <div class="col-lg-4">
-                    <div class="card course-card">
-                        <div class="course-head">
-                            <img src="../assets/resources/images/course-grid-2.jpg" class="img-fluid course-img" alt="">
-                            <a href="course-detail.html" class="course-link"><i class="fa fa-link" aria-hidden="true"></i></a>
-                        </div>
-                        <div class="course-detail">
-                            <h4 class="heading">Masters in Marketing</h4>
-                            <span class="brief">In this course, you learn all advanced techniques and methodologies.</span>
-                            <ul class="course-features">
-                                <li><i class="fa fa-map-marker"></i> America</li>
-                                <li><i class="fa fa-clock-o"></i> 1 year</li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="course-detail">
+                    <h4 class="heading">Diploma in Marketing</h4>
+                    <span class="brief">In this course, you learn all advanced techniques and methodologies.</span>
+                    <ul class="course-features">
+                        <li><i class="fa fa-map-marker"></i> California</li>
+                        <li><i class="fa fa-clock-o"></i> 1 year</li>
+                    </ul>
                 </div>
-                <div class="col-lg-4">
-                    <div class="card course-card new">
-                        <div class="course-head">
-                            <img src="../assets/resources/images/course-grid-3.jpg" class="img-fluid course-img" alt="">
-                            <a href="course-detail.html" class="course-link"><i class="fa fa-link" aria-hidden="true"></i></a>
-                        </div>
-                        <div class="course-detail">
-                            <h4 class="heading">Diploma in Engineering</h4>
-                            <span class="brief">In this course, you learn all advanced techniques and methodologies.</span>
-                            <ul class="course-features">
-                                <li><i class="fa fa-map-marker"></i> Paris</li>
-                                <li><i class="fa fa-clock-o"></i> 1 year</li>
-                            </ul>
-                        </div>
-                    </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="card course-card">
+                <div class="course-head">
+                    <img src="../assets/resources/images/course-grid-2.jpg" class="img-fluid course-img" alt="">
+                    <a href="course-detail.html" class="course-link"><i class="fa fa-link" aria-hidden="true"></i></a>
                 </div>
+                <div class="course-detail">
+                    <h4 class="heading">Masters in Marketing</h4>
+                    <span class="brief">In this course, you learn all advanced techniques and methodologies.</span>
+                    <ul class="course-features">
+                        <li><i class="fa fa-map-marker"></i> America</li>
+                        <li><i class="fa fa-clock-o"></i> 1 year</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="card course-card new">
+                <div class="course-head">
+                    <img src="../assets/resources/images/course-grid-3.jpg" class="img-fluid course-img" alt="">
+                    <a href="course-detail.html" class="course-link"><i class="fa fa-link" aria-hidden="true"></i></a>
+                </div>
+                <div class="course-detail">
+                    <h4 class="heading">Diploma in Engineering</h4>
+                    <span class="brief">In this course, you learn all advanced techniques and methodologies.</span>
+                    <ul class="course-features">
+                        <li><i class="fa fa-map-marker"></i> Paris</li>
+                        <li><i class="fa fa-clock-o"></i> 1 year</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         <a *ngFor="let course of courses" class="col-lg-4" [routerLink]="['/detail/course/', course.iCodCou]">
             <div class="card course-card new">
                 <div class="course-head">
@@ -116,6 +97,7 @@
             </div>
         </a>
     </div>
+
     <div class="row mt-20">
         <div class="col-lg-12">
             <nav>
