--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -41,35 +41,13 @@
     <form>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <input id="search-1" type="text" [(ngModel)]="searchTerm" class="form-control" placeholder="Start typing...">
+                <div class="col-12 input-group input-group-transparent">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-search fa-2x pr-2"></i>
+                        </span>
                     </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <select class="form-control">
-                            <option>1 year</option>
-                            <option>2 years</option>
-                            <option>4 years</option>
-                            <option>6 years</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <select class="form-control">
-                            <option>Ontario</option>
-                            <option>London</option>
-                            <option>New York</option>
-                            <option>Amsterdam</option>
-                        </select>
-                    </div>
-                </div>                    
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-search"></i> Search</button>
-                    </div>
+                    <input type="text" class="form-control" id="search-1" name="search" [(ngModel)]="searchTerm" type="text" placeholder="Start typing..." />
                 </div>
             </div>
         </div>
