--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -41,7 +41,7 @@
     <form>
         <div class="container">
             <div class="row">
-                <div class="col-12 input-group input-group-transparent">
+                <div class="col-12 input-group">
                     <div class="input-group-prepend">
                         <span class="input-group-text">
                             <i class="fa fa-search fa-2x pr-2"></i>
@@ -53,7 +53,6 @@
         </div>
     </form>
 </div>
-
 
 <section class="container mt-60 mb-100">
     <div class="row">
