Activities and Progress
Activities and Progress

--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -22,7 +22,7 @@
                     <div>
                         <span>Categoria</span>
                         <br>
-                        <strong class="text-primary">{{currentCourse.category.sNamCat}}</strong>
+                        <!-- <strong class="text-primary">{{currentCourse.category.sNamCat}}</strong> -->
                     </div>
                     <div>
                         <span>Duração</span>
@@ -84,7 +84,7 @@
     <section class="container mt-100 mb-100">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="heading">Atividades <span class="text-primary">{{currentCourse.category.sNamCat}}</span></h2>
+                <!-- <h2 class="heading">Atividades <span class="text-primary">{{currentCourse.category.sNamCat}}</span></h2> -->
             </div>
             <div class="col-lg-3">
                 <ul class="nav nav-pills flex-column" role="tablist">
