--- a/src/app/activity-general/create-activity/create-activity.component.html
+++ b/src/app/activity-general/create-activity/create-activity.component.html
@@ -12,10 +12,9 @@
     <div class="row">
         <div class="col-lg-6">
             <h2 class="heading">Selecione <span class="text-primary">Curso</span></h2>
-            <label for="course">Curso</label>
-            <label for="categoria">Curso 1</label>
-            <select [(ngModel)]="courseOne" name="category" class="form-control" required>
-                <option *ngFor="let category of categories" [value]="category.iCodCou">{{ category.sNamCou }}</option>
+            <label for="selectedCourse">Curso</label>
+            <select [(ngModel)]="selectedCourse" name="selectedCourse" class="form-control" required>
+                <option *ngFor="let course of courses" [value]="course.iCodCou">{{ course.sNamCou }}</option>
             </select>
             <br>
             <h2 class="heading">Nova <span class="text-primary">Atividade</span></h2>
