--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -59,9 +59,9 @@
             <div class="col-lg-4">
                 <p>Progresso</p>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-                        style="width: 80%;">
-                        80%
+                    <div class="progress-bar" role="progressbar" attr.aria-valuenow="{{progress}}" aria-valuemin="0"
+                        aria-valuemax="100" [style.width]="progress">
+                        {{progress}}
                     </div>
                 </div>
             </div>
@@ -87,62 +87,48 @@
                 <!-- <h2 class="heading">Atividades <span class="text-primary">{{currentCourse.category.sNamCat}}</span></h2> -->
             </div>
             <div class="col-lg-3">
-                <ul class="nav nav-pills flex-column" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#t3body1" aria-controls="t3body1" role="tab" data-toggle="tab"><i
-                                class="fa fa-graduation-cap fa-fw"></i>Atividade 1</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#t3body2" aria-controls="t3body2" role="tab" data-toggle="tab"><i
-                                class="fa fa-graduation-cap fa-fw"></i> Atividade 2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#t3body3" aria-controls="t3body3" role="tab" data-toggle="tab"><i
-                                class="fa fa-graduation-cap fa-fw"></i> Atividade 3</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#t3body4" aria-controls="t3body4" role="tab" data-toggle="tab"><i
-                                class="fa fa-graduation-cap fa-fw"></i> Atividade 4</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#t3body5" aria-controls="t3body5" role="tab" data-toggle="tab"><i
-                                class="fa fa-graduation-cap fa-fw"></i> Atividade 5</a>
-                    </li>
+                <ul class="nav nav-pills flex-column"  role="tablist">
+                        <a *ngFor="let activity of activities; let z=index">
+                                <li  *ngIf="z == 0" class="nav-item">
+                    <a   *ngFor="let activity of activities; let i=index" attr.href="#t3body{{i}}" attr.aria-controls="t3body{{i}}" role="tab"
+                    data-toggle="tab" class="nav-link" >
+
+                    <li *ngIf="i == 0"  >
+                            <a class="nav-link active" >
+                                <i class="fa fa-graduation-cap fa-fw"></i>Fun at School
+                            </a>
+                        </li>
+
+                        <li *ngIf="i > 0" class="nav-link" >
+                            <!-- <a class="nav-link" > -->
+                                <i class="fa fa-graduation-cap fa-fw"></i> {{activity.sDesAct}} INDEX {{i}}
+                            <!-- </a> -->
+                        </li>
+                    </a>
+                </li>
+                </a>
 
                 </ul>
             </div>
-            <div class="col-lg-9">
-                <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane fade show active" id="t3body1">
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
-                            spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in
-                            this spot, which was created for the bliss of souls like mine. I am so happy, my dear
-                            friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my
-                            talents.</p>
-                        <p>I should be incapable of drawing a single stroke at the present moment; and yet I feel that
-                            I never was a greater artist than now. When, while the lovely valley teems with vapour
-                            around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my
-                            trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among
-                            the tall grass by the trickling stream; and, as I lie close to the earth, a thousand
-                            unknown plants are noticed by me.</p>
-                        <button type="button" class="btn btn-success mt-20">Success</button>
 
-                    </div>
-                    <div role="tabpanel" class="tab-pane fade" id="t3body2">
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
-                            spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in
-                            this spot, which was created for the bliss of souls like mine. I am so happy, my dear
-                            friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my
-                            talents.</p>
-                        <p>I should be incapable of drawing a single stroke at the present moment; and yet I feel that
-                            I never was a greater artist than now. When, while the lovely valley teems with vapour
-                            around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my
-                            trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among
-                            the tall grass by the trickling stream; and, as I lie close to the earth, a thousand
-                            unknown plants are noticed by me.</p>
-                    </div>
-                    <div role="tabpanel" class="tab-pane fade" id="t3body3">
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
+            <div class="col-lg-9">
+                     <div class="tab-content">
+                <a *ngFor="let activity of activities; let x=index" role="tabpanel"  class="tab-pane fade" id="t3body{{x}}" >
+                    <div *ngIf="x == 0"  >
+                            <p>{{x}}</p>
+                                <button type="button" class="btn btn-success mt-20">Success</button>
+                        </div>
+       
+                        <div *ngIf="x > 0"  >
+                            <p>{{activity.sDesAct}}</p>
+                            <p>{{x}}</p>
+                            <button type="button" class="btn btn-success mt-20">Success</button>
+
+                        </div>
+                    
+                </a>
+                <!-- <div role="tabpanel" class="tab-pane fade" id="t3body3">
+                        <p>3A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
                             spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in
                             this spot, which was created for the bliss of souls like mine. I am so happy, my dear
                             friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my
@@ -163,7 +149,7 @@
 
                         <pdf-viewer src="../../assets/pdf/reading_sample_sappress_1601_sap_hana_xsa.pdf" [show-all]="false"
                             [page]="page" (after-load-complete)="afterLoadComplete($event)"></pdf-viewer>
-                        <!-- <pdf-viewer src="../../assets/pdf/reading_sample_sappress_1601_sap_hana_xsa.pdf"></pdf-viewer> -->
+                        <pdf-viewer src="../../assets/pdf/reading_sample_sappress_1601_sap_hana_xsa.pdf"></pdf-viewer> 
                     </div>
                     <div role="tabpanel" class="tab-pane fade" id="t3body5">
                         <section class="container mt-40 mb-40">
@@ -175,7 +161,7 @@
                                         <span class="icon-divider"></span>
                                     </h2>
                                     <div class="youtube" data-video-id="LCRoZ7qWGWA">
-                                        <!-- Replace video id with your video id -->
+                                        Replace video id with your video id 
                                         <div class="btn-play">
                                             <i class="fa fa-youtube-play"></i>
                                         </div>
@@ -183,8 +169,8 @@
                                 </div>
                             </div>
                         </section>
-                    </div>
-                </div>
+                    </div> -->
             </div>
+        </div>
         </div>
     </section>
