--- a/src/app/activity-general/create-activity/create-activity.component.html
+++ b/src/app/activity-general/create-activity/create-activity.component.html
@@ -57,7 +57,7 @@
                     </div>
                 </div> -->
                 <br>
-                <button class="btn btn-primary">Criar Grupo</button>
+                <button class="btn btn-primary">Criar Atividade</button>
                 <br>
             </form>
         </div>
