--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -114,17 +114,20 @@
             <div class="col-lg-9">
                      <div class="tab-content">
                 <a *ngFor="let activity of activities; let x=index" role="tabpanel"  class="tab-pane fade" id="t3body{{x}}" >
+                        <form (ngSubmit)="onSubmit()">
                     <div *ngIf="x == 0"  >
                             <p>{{x}}</p>
                                 <button type="button" class="btn btn-success mt-20">Success</button>
                         </div>
        
+              
                         <div *ngIf="x > 0"  >
                             <p>{{activity.sDesAct}}</p>
                             <p>{{x}}</p>
                             <button type="button" class="btn btn-success mt-20">Success</button>
 
                         </div>
+                    </form>
                     
                 </a>
                 <!-- <div role="tabpanel" class="tab-pane fade" id="t3body3">
