--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -1,40 +1,153 @@
-<section class="mt-120">
-    <!-- Fixed because of Angular 4 -->
-    <!-- <div class="container mt-60 mb-60"> -->
+
+        <header class="header-1">            <!-- Header = Topbar + Navigation Bar -->
+            <div class="topbar-wrapper">
+                <div class="container">            <!-- Dark Blue Topbar -->
+                    <div class="topbar">
+                        <div>
+                                    <!-- Change Topbar Contact Number here -->
+                        </div>
+                        <div>
+                            <ul class="topbar-widgets">         <!-- Topbar Widgets - Cart, Language Select & Login Signup -->
+                                <li>
+                                    <span data-toggle="modal" data-target="#cart-modal">
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </span>
+                                </li>
+                                <li>
+                                    <span data-toggle="modal" data-target="#lang-modal">
+                                        <i class="fa fa-globe"></i>
+                                    </span>
+                                </li>
+                                <li>
+                                    <span data-toggle="modal" data-target="#login-modal">
+                                        {{currentUser.sLogUser}}
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    
+            <nav class="navbar navbar-expand-lg">         <!-- Navigation Bar -->
+                <div class="container">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="../assets/resources/images/logo.png" alt="">          <!-- Replace with your Logo -->
+                    </a>
+    
+                    <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-navigation" aria-expanded="false">
+                        <span class="navbar-toggler-icon">
+                            <i class="fa fa-bars"></i>          <!-- Mobile Navigation Toggler Icon -->
+                        </span>
+                    </button>
+    
+                    <div class="navbar-collapse collapse" id="main-navigation">         <!-- Main Menu -->
+                        <ul class="navbar-nav">
+                            <li class="nav-item has-menu"><a href="#" class="nav-link">Cursos</a>
+                                <div class="sub-menu">          <!-- Sub Menu -->
+                                    <ul class="menu-list">
+                                        <li><a href="user/course/add" routerLink="course/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar Curso</a></li>
+                                        <li><a href="user/course/update" routerLink="course/update"  role="button" routerLinkActive="active">Editar Curso</a></li>
+                                        <li><a href="user/course/remove" routerLink="course/remove"  role="button" routerLinkActive="active">Excluir Curso</a></li>
+                                        <li><a href="user/course/list/all" routerLink="course/list/all"  role="button" routerLinkActive="active">Visualizar Cursos</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav-item has-menu"><a href="#" class="nav-link">Atividades</a>
+                                <div class="sub-menu">          <!-- Sub Menu -->
+                                    <ul class="menu-list">
+                                        <li><a href="user/activity/add" routerLink="activity/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar Atividade</a></li>
+                                        <li><a href="user/activity/update" routerLink="activity/update"  role="button" routerLinkActive="active">Editar Atividade</a></li>
+                                        <li><a href="user/activity/remove" routerLink="activity/remove"  role="button" routerLinkActive="active">Excluir Atividade</a></li>
+                                        <li><a href="user/activity/list/all" routerLink="activity/list/all"  role="button" routerLinkActive="active">Visualizar Atividades</a></li>
+                                    </ul>
+                                </div>
+                            </li>                           
+                            <li class="nav-item has-menu"><a href="#" class="nav-link">Grupos</a>
+                                <div class="sub-menu">          <!-- Sub Menu -->
+                                    <ul class="menu-list">
+                                        <li><a href="user/group/add" routerLink="grouo/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar Grupo</a></li>
+                                        <li><a href="user/group/update" routerLink="group/update"  role="button" routerLinkActive="active">Editar Grupo</a></li>
+                                        <li><a href="user/group/remove" routerLink="group/remove"  role="button" routerLinkActive="active">Excluir Grupo</a></li>
+                                        <li><a href="user/group/list/all" routerLink="group/list/all"  role="button" routerLinkActive="active">Visualizar Grupos</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav-item has-menu"><a href="#" class="nav-link">Perfil</a>
+                                <div class="sub-menu">          <!-- Sub Menu -->
+                                    <ul class="menu-list">
+                                        <li><a href="user/update" routerLink="user/upate"  role="button" routerLinkActive="active">Editar Perfil</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+    <!-- Slider Revolution -->
+    <div class="rev_slider_wrapper fullwidthbanner-container">
+            <div id="slider" class="rev_slider fullwidthbanner" data-version="5.0.7">  
+                </div>
+    </div>
+    <!-- Revolution Slider Ends -->
+
+
+
+
+<!-- <section class="mt-120">
+    Fixed because of Angular 4
+    <div class="container mt-60 mb-60">
     <div class="container">
         <div class="row">
             <div class="col-sm-7 mt-100">
-                <!-- <h3 class="heading">Who We <span class="color2">Are</span></h3> -->
-                <!-- Teste - Current User -->
+                <h3 class="heading">Who We <span class="color2">Are</span></h3>
+                Teste - Current User
                 <h1>Hi {{currentUser.sNamUser}}!</h1>
                 <p>Obrigado por trabalhar conosco, vamos crescer juntos.</p>
                 <p>Disponibilizamos os melhores cursos de ERP para preparar você para o mercado, apresentamos cursos
                     com valores que cabe no seu bolso.</p>
                 <br />
-                <ul class="list-styled pull-left">
+                 <ul class="list-styled pull-left">
                     <li>Cenários Reais</li>
                     <li>Preços justos </li>
                 </ul>
                 <div class="clearfix"></div>
                 <br />
-                <!-- Define route to subscribe -->
-                <a routerLink="course/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar
+                 Define route to subscribe -->
+                <!-- <a routerLink="course/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar
                     novo curso<i class="fa fa-long-arrow-right"></i></a>
-                <br />
-                <br>
+                 <br /> -->
+                <!-- <br> -->
+                 <!-- Define route to subscribe --> 
+                <!-- <a routerLink="add/group" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar
+                    Grupo<i class="fa fa-long-arrow-right"></i></a> -->
+                <!-- <br /> -->
+                <!-- <br> -->
                 <!-- Define route to subscribe -->
-                <a routerLink="add/group" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar
-                    Grupo<i class="fa fa-long-arrow-right"></i></a>
-                <br />
-                <br>
-                <!-- Define route to subscribe -->
-                <a routerLink="add/activity" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar
+                <!-- <a routerLink="add/activity" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar
                     Atividade<i class="fa fa-long-arrow-right"></i></a>
-                <br />
+                <br />  
             </div>
         </div>
     </div>
     <br />
+</section> -->
+
+<br>
+<section class="container mt-120 mb-40">
+    <div class="row">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-10 text-center">
+                <h1 class="heading">Olá <span class="text-primary">{{currentUser.sNamUser}}!</span></h1>
+                <p class="lead">Disponibilizamos os melhores cursos de ERP para preparar você para o mercado, apresentamos cursos
+                    com valores que cabe no seu bolso.</p>
+            </div>
+        </div>
+    </div>
+
+    </div>
 </section>
 
 <div class="pt-60 pb-60 bg-light">
@@ -56,20 +169,23 @@
 </div>
 
 
-<section class="container mt-60 mb-100">
+<section class="container mt-20 mb-100">
     <div class="row">
         <a *ngFor="let course of courses | searchPipe: searchTerm; let i = index" class="col-lg-4" [routerLink]="['/detail/course/', course.iCodCou]">
             <div class="card course-card new">
                 <div class="course-head">
-                    <img src="../assets/resources/images/course-grid-1.jpg" class="img-fluid course-img" alt="">
+                    <img src="../assets/resources/images/grid_sap.jpg" class="img-fluid course-img" alt="">
                     <a [routerLink]="['/detail/course/', course.iCodCou]" class="course-link"><i class="fa fa-link"
                             aria-hidden="true"></i></a>
                 </div>
                 <div class="course-detail">
                     <h4 class="heading">{{course.sNamCou}}</h4>
-                    <h5 class="heading"><span class="text-primary">R$:</span>{{course.fPriCou}},00</h5>
+                    <h5 class="brief">Valor total do curso de nível {{course.sDifCou}} R$ {{course.fPriCou}},00</h5>
                     <ul class="course-features">
                         <li><i class="fa fa-map-marker"></i>{{course.category.sNamCat}}</li>
+                        <!-- <li><i class="fa fa-map-marker"></i>{{course.sStaCou}}</li> -->
+                        <li><i class="fa fa-map-marker"></i>{{course.sDifCou}}</li>
+                        <!-- <li><i class="fa fa-clock-o"></i>{{course.dDatCou}}</li> -->
                         <li><i class="fa fa-clock-o"></i> {{course.fHorCou}}</li>
                     </ul>
                 </div>
