--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -66,7 +66,7 @@
                             <li class="nav-item has-menu"><a href="#" class="nav-link">Grupos</a>
                                 <div class="sub-menu">          <!-- Sub Menu -->
                                     <ul class="menu-list">
-                                        <li><a href="user/group/add" routerLink="grouo/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar Grupo</a></li>
+                                        <li><a href="user/group/add" routerLink="group/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar Grupo</a></li>
                                         <li><a href="user/group/update" routerLink="group/update"  role="button" routerLinkActive="active">Editar Grupo</a></li>
                                         <li><a href="user/group/remove" routerLink="group/remove"  role="button" routerLinkActive="active">Excluir Grupo</a></li>
                                         <li><a href="user/group/list/all" routerLink="group/list/all"  role="button" routerLinkActive="active">Visualizar Grupos</a></li>
