Include pagination and currency formatter

--- a/src/app/course-general/create-course/create-course.component.html
+++ b/src/app/course-general/create-course/create-course.component.html
@@ -18,7 +18,7 @@
                     <input type="text" class="form-control" id="sNamCou" maxlength="50" required [(ngModel)]="course.sNamCou" name="sNamCou">
                     <div *ngIf="!sNamCou.valid" class="alert alert-danger">
                         <div [hidden]="!sNamCou.hasError('required')">Email is required</div>
-                        <div [hidden]="!sNamCou.length === 50">
+                        <div [hidden]="!course.sNamCou.length === 50">
                             <span class="text-muted">Título apenas pode atingir 50 caracteres.</span>
                         </div>
                     </div>
@@ -27,8 +27,7 @@
                     <input  type="text" class="form-control" id="fHorCou" required [(ngModel)]="course.fHorCou" name="fHorCou">
                     <br>
                     <label for="preco">Preço</label>
-                    <input class="form-control" id="fPriCou" required [(ngModel)]="course.fPriCou"
-                        name="fPriCou" />
+                    <input currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' ,allowNegative: false }" class="form-control" id="fPriCou" required [(ngModel)]="course.fPriCou" name="fPriCou" />
                     <br>
                     <label for="message">Descrição</label>
                     <textarea class="form-control" id="sDesCou" required [(ngModel)]="course.sDesCou"
