--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -57,7 +57,7 @@
 
 <section class="container mt-60 mb-100">
     <div class="row">
-        <a *ngFor="let course of courses | searchPipe: searchTerm; let i = index" class="col-lg-4" [routerLink]="['/detail/course/', course.iCodCou]">
+        <a *ngFor="let course of courses | paginate: { itemsPerPage: 6, currentPage: pageNumber, totalItems: courses.length } | searchPipe: searchTerm; let i = index" class="col-lg-4" [routerLink]="['/detail/course/', course.iCodCou]">
             <div class="card course-card new">
                 <div class="course-head">
                     <img src="../assets/resources/images/course-grid-1.jpg" class="img-fluid course-img" alt="">
@@ -77,7 +77,18 @@
     </div>
     <div class="row mt-20">
         <div class="col-lg-12">
-            <nav>
+            <pagination-controls (pageChange)="pageNumber = $event" 
+                maxSize="9"
+                directionLinks="true"
+                autoHide="true"
+                responsive="true"
+                previousLabel="Previous"
+                nextLabel="Next"
+                screenReaderPaginationLabel="Pagination"
+                screenReaderPageLabel="page"
+                screenReaderCurrentLabel="You're on page">
+            </pagination-controls>
+            <!-- <nav>
                 <ul class="pagination justify-content-center">
                     <li class="page-item">
                         <a class="page-link" href="#">Previous</a>
@@ -95,7 +106,7 @@
                         <a class="page-link" href="#">Next</a>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
         </div>
     </div>
 </section>
