--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -179,7 +179,7 @@
                 </div>
                 <div class="course-detail">
                     <h4 class="heading">{{course.sNamCou}}</h4>
-                    <h5 class="brief">Valor total do curso de nível {{course.sDifCou}} R$ {{course.fPriCou}},00</h5>
+                    <h5 class="brief">Valor total do curso de nível {{course.sDifCou}} R$ {{course.fPriCou}}</h5>
                     <ul class="course-features">
                         <li><i class="fa fa-map-marker"></i>{{course.category.sNamCat}}</li>
                         <!-- <li><i class="fa fa-map-marker"></i>{{course.sStaCou}}</li> -->
