--- a/src/app/course-general/create-course/create-course.component.html
+++ b/src/app/course-general/create-course/create-course.component.html
@@ -132,13 +132,13 @@
             <form (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label for="name">Titulo</label>
-                    <input type="text" class="form-control" id="sNamCou" maxlength="50" required [(ngModel)]="course.sNamCou" name="sNamCou">
-                    <div *ngIf="!sNamCou.valid" class="alert alert-danger">
-                        <div [hidden]="!sNamCou.hasError('required')">Email is required</div>
-                        <div [hidden]="!course.sNamCou.length === 50">
+                    <input type="text" class="form-control" id="sNamCou" maxlength="30" required [(ngModel)]="course.sNamCou" name="sNamCou" #sNamCou="ngModel">
+                    <!-- <div *ngIf="sNamCou.valid" class="alert alert-danger">
+                        <div [hidden]="!sNamCou.hasError('required')">Email is required</div> 
+                         <div [hidden]="sNamCou.toString().length === 30">
                             <span class="text-muted">Título apenas pode atingir 50 caracteres.</span>
                         </div>
-                    </div>
+                    </div> -->
                     <br>
                     <label for="horas">Horas</label>
                     <input type="text" class="form-control" id="fHorCou" required [(ngModel)]="course.fHorCou" name="fHorCou">
@@ -166,8 +166,6 @@
                     <select type="text" [(ngModel)]="course.sDifCou" (change)="onChangeCategorySelect($event)" name="course.sDifCou"
                         class="form-control" required>
                         <option value="1">Iniciante</option>
-                        <option value="1">Iniciante Jorge</option>
-                        <option value="1">Iniciante Test</option>
                         <option value="2">Intermediario</option>
                         <option value="3">Avançado</option>
                     </select>
