--- a/src/app/course-general/create-course/create-course.component.html
+++ b/src/app/course-general/create-course/create-course.component.html
@@ -129,22 +129,22 @@
     <div class="row">
         <div class="col-lg-6">
             <h2 class="heading">Novo <span class="text-primary">Curso</span></h2>
-            <form (ngSubmit)="onSubmit()">
+            <form >
                 <div class="form-group">
                     <label for="name">Titulo</label>
                     <input type="text" class="form-control" id="sNamCou" maxlength="30" required [(ngModel)]="course.sNamCou" name="sNamCou" #sNamCou="ngModel">
-                    <!-- <div *ngIf="sNamCou.valid" class="alert alert-danger">
-                        <div [hidden]="!sNamCou.hasError('required')">Email is required</div> 
-                         <div [hidden]="sNamCou.toString().length === 30">
-                            <span class="text-muted">Título apenas pode atingir 50 caracteres.</span>
-                        </div>
+                    <!-- <div class="alert alert-danger" *ngIf="course.sNamCou.length === 50">
+                        <span class="text-muted">Título apenas pode atingir 50 caracteres.</span>
+                    </div>
+                    <div *ngIf="!sNamCou.valid" class="alert alert-danger">
+                        <div *ngIf="sNamCou.hasError('required')">Title is required</div> 
                     </div> -->
                     <br>
                     <label for="horas">Horas</label>
                     <input type="text" class="form-control" id="fHorCou" required [(ngModel)]="course.fHorCou" name="fHorCou">
                     <br>
                     <label for="preco">Preço</label>
-                    <input currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' ,allowNegative: false }" class="form-control" id="fPriCou" (change)="onChangePrice(course.fPriCou)" required [(ngModel)]="course.fPriCou" name="fPriCou" />
+                    <input currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' ,allowNegative: false }" class="form-control" id="fPriCou" (ngModelChange)="onChangePrice(course.fPriCou)" required [(ngModel)]="course.fPriCou" name="fPriCou" />
                     <br>
                     <label for="message">Descrição</label>
                     <textarea class="form-control" id="sDesCou" required [(ngModel)]="course.sDesCou" name="sDesCou"></textarea>
@@ -168,7 +168,7 @@
                         <option value="3">Avançado</option>
                     </select>
                     <br>
-                    <button class="btn btn-primary">Criar Curso</button>
+                    <button (click)="onSubmit()" class="btn btn-primary">Criar Curso</button>
                     <br>
                 </div>
             </form>
