--- a/src/app/activity-general/create-activity/create-activity.component.html
+++ b/src/app/activity-general/create-activity/create-activity.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h1 class="heading">Atividades</h1>
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="user/">User</a></li>
             <li class="breadcrumb-item active"><a href="#">Nova Atividade</a></li>
         </ul>
     </div>
