--- a/src/app/course-general/create-course/create-course.component.html
+++ b/src/app/course-general/create-course/create-course.component.html
@@ -119,7 +119,7 @@
     <div class="container">
         <h1 class="heading">Curso</h1>
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="user/">User</a></li>
             <li class="breadcrumb-item active"><a href="#">Curso</a></li>
         </ul>
     </div>
@@ -129,19 +129,6 @@
     <div class="form-container col-lg-12">
         <section class="data-container pl-5">  
             <h2 class="heading">Novo <span class="text-primary">Curso</span></h2>
-<<<<<<< HEAD
-            <form >
-                <div class="form-group">
-                    <label for="name">Titulo</label>
-                    <input type="text" class="form-control" id="sNamCou" maxlength="30" required [(ngModel)]="course.sNamCou" name="sNamCou" #sNamCou="ngModel">
-                    <!-- <div class="alert alert-danger" *ngIf="course.sNamCou.length === 50">
-                        <span class="text-muted">Título apenas pode atingir 50 caracteres.</span>
-                    </div>
-                    <div *ngIf="!sNamCou.valid" class="alert alert-danger">
-                        <div *ngIf="sNamCou.hasError('required')">Title is required</div> 
-                    </div> -->
-                    <br>
-=======
             <form class="mb-5">
                 <div class="form-group row col-lg-6">
                     <label for="name">Titulo</label>
@@ -152,26 +139,20 @@
                 </div>
 
                 <div class="form-group row col-lg-6">
->>>>>>> b8057f5c386b787e2d78e5a517d305136b816344
                     <label for="horas">Horas</label>
                     <span style="color: red;">*</span>
-                    <input type="text" class="form-control" id="fHorCou" required [(ngModel)]="hours" name="fHorCou">
+                    <input type="number" class="form-control" id="fHorCou" required [(ngModel)]="hours" name="fHorCou">
                     <span style="color: red;" *ngIf="showHoursRequiredError">Horas é obrigatório.</span>
                 </div>
 
                 <div class="form-group row col-lg-6">
                     <label for="preco">Preço</label>
-<<<<<<< HEAD
-                    <input currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' ,allowNegative: false }" class="form-control" id="fPriCou" (ngModelChange)="onChangePrice(course.fPriCou)" required [(ngModel)]="course.fPriCou" name="fPriCou" />
-                    <br>
-=======
                     <span style="color: red;">*</span>
                     <input currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' ,allowNegative: false }" class="form-control" id="fPriCou" (ngModelChange)="onChangePrice(price)" required [(ngModel)]="price" name="fPriCou" />
                     <span *ngIf="showPriceRequiredError" style="color: red;">Preço é obrigatório.</span>
                 </div>
                 
                 <div class="form-group row col-lg-6">
->>>>>>> b8057f5c386b787e2d78e5a517d305136b816344
                     <label for="message">Descrição</label>
                     <span style="color: red;">*</span>
                     <textarea class="form-control" id="sDesCou" maxlength="3999" required [(ngModel)]="description" name="sDesCou"></textarea>
@@ -187,7 +168,7 @@
                         class="form-control" required>
                         <option selected value="null">Selecione uma opção...</option>
                         <option value="1">SAP</option>
-                        <option value="2">Totvs!</option>
+                        <option value="2">Oracle</option>
                     </select>
                     <span *ngIf="showCategoryRequiredError" style="color: red;">Categoria é obrigatório.</span>
                 </div>
@@ -202,13 +183,7 @@
                         <option value="2">Intermediario</option>
                         <option value="3">Avançado</option>
                     </select>
-<<<<<<< HEAD
-                    <br>
-                    <button (click)="onSubmit()" class="btn btn-primary">Criar Curso</button>
-                    <br>
-=======
                     <span *ngIf="showDifRequiredError" style="color: red;">Dificuldade é obrigatório.</span>
->>>>>>> b8057f5c386b787e2d78e5a517d305136b816344
                 </div>
                 
                 <button class="btn btn-primary" (click)="onSubmit()">Criar Curso</button>
