--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h1 class="heading">Course Detail</h1>
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="user">Home</a></li>
             <li class="breadcrumb-item active"><a href="#">Course Detail</a></li>
         </ul>
     </div>
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-lg-4 mt-20">
             <div class="course-intro">
-                <img src="../assets/resources/images/course-single.jpg" class="img-fluid" alt="">
+                <img src="../assets/resources/images/grid_sap.jpg"  class="img-fluid" alt="">
             </div>
         </div>
         <div class="col-lg-8 mt-20">
@@ -22,7 +22,7 @@
                     <div>
                         <span>Categoria</span>
                         <br>
-                        <!-- <strong class="text-primary">{{currentCourse.category.sNamCat}}</strong> -->
+                        <strong class="text-primary">{{currentCourse.category.sNamCat}}</strong>
                     </div>
                     <div>
                         <span>Duração</span>
@@ -60,7 +60,7 @@
                 <p>Progresso</p>
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" attr.aria-valuenow="{{progress}}" aria-valuemin="0"
-                        aria-valuemax="100" [style.width]="progress">
+                        aria-valuemax="101" [style.width.%]="progress">
                         {{progress}}%
                     </div>
                 </div>
@@ -95,13 +95,13 @@
 
                     <li *ngIf="i == 0"  >
                             <a class="nav-link active" >
-                                <i class="fa fa-graduation-cap fa-fw"></i>Fun at School
+                                <i class="fa fa-graduation-cap fa-fw"></i>{{activity.sNamAct}}
                             </a>
                         </li>
 
                         <li *ngIf="i > 0" class="nav-link" >
                             <!-- <a class="nav-link" > -->
-                                <i class="fa fa-graduation-cap fa-fw"></i> {{activity.sDesAct}} INDEX {{i}}
+                                <i class="fa fa-graduation-cap fa-fw"></i> {{activity.sNamAct}}
                             <!-- </a> -->
                         </li>
                     </a>
@@ -116,14 +116,13 @@
                 <a *ngFor="let activity of activities; let x=index" role="tabpanel"  class="tab-pane fade" id="t3body{{x}}" >
                         <form (ngSubmit)="onSubmit()">
                     <div *ngIf="x == 0"  >
-                            <p>{{x}}</p>
+                            <p>{{activity.sDesAct}}</p>
                                 <button type="button" class="btn btn-success mt-20" (click)="accomplishTask(activity.iCodAct)">Success</button>
                         </div>
        
               
                         <div *ngIf="x > 0"  >
                             <p>{{activity.sDesAct}}</p>
-                            <p>{{x}}</p>
                             <button type="button" class="btn btn-success mt-20" (click)="accomplishTask(activity.iCodAct)">Success</button>
 
                         </div>
