--- a/src/app/course-general/update-course/update-course.component.html
+++ b/src/app/course-general/update-course/update-course.component.html
@@ -119,7 +119,7 @@
     <div class="container">
         <h1 class="heading">Curso</h1>
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="user">User</a></li>
             <li class="breadcrumb-item active"><a href="#">Curso</a></li>
         </ul>
     </div>
