--- a/src/app/course-general/list-course/list-course.component.html
+++ b/src/app/course-general/list-course/list-course.component.html
@@ -313,25 +313,17 @@
 
     <div class="row mt-20">
         <div class="col-lg-12">
-            <nav>
-                <ul class="pagination justify-content-center">
-                    <li class="page-item">
-                        <a class="page-link" href="#">Previous</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">1</a>
-                    </li>
-                    <li class="page-item active">
-                        <a class="page-link" href="#">2</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">3</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                </ul>
-            </nav>                
+            <pagination-controls (pageChange)="pageNumber = $event" 
+                maxSize="9"
+                directionLinks="true"
+                autoHide="true"
+                responsive="true"
+                previousLabel="Anterior"
+                nextLabel="Próximo"
+                screenReaderPaginationLabel="Paginação"
+                screenReaderPageLabel="page"
+                screenReaderCurrentLabel="Você está na página">
+            </pagination-controls>
         </div>
     </div>
 </section>
