--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -170,7 +170,7 @@
 
 <section class="container mt-60 mb-100">
     <div class="row">
-        <a *ngFor="let course of courses | paginate: { itemsPerPage: 6, currentPage: pageNumber, totalItems: courses.length } | searchPipe: searchTerm; let i = index" class="col-lg-4" [routerLink]="['/detail/course/', course.iCodCou]">
+        <a *ngFor="let course of courses | paginate: { itemsPerPage: 6, currentPage: pageNumber } | searchPipe: searchTerm; let i = index" class="col-lg-4" [routerLink]="['/detail/course/', course.iCodCou]">
             <div class="card course-card new">
                 <div class="course-head">
                     <img src="../assets/resources/images/grid_sap.jpg" class="img-fluid course-img" alt="">
@@ -198,31 +198,12 @@
                 directionLinks="true"
                 autoHide="true"
                 responsive="true"
-                previousLabel="Previous"
-                nextLabel="Next"
-                screenReaderPaginationLabel="Pagination"
+                previousLabel="Anterior"
+                nextLabel="Próxima"
+                screenReaderPaginationLabel="Paginação"
                 screenReaderPageLabel="page"
-                screenReaderCurrentLabel="You're on page">
+                screenReaderCurrentLabel="Você está na página">
             </pagination-controls>
-            <!-- <nav>
-                <ul class="pagination justify-content-center">
-                    <li class="page-item">
-                        <a class="page-link" href="#">Previous</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">1</a>
-                    </li>
-                    <li class="page-item active">
-                        <a class="page-link" href="#">2</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">3</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                </ul>
-            </nav> -->
         </div>
     </div>
 </section>
