fix alignments and style
fix alignments and style

--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -78,7 +78,7 @@
         <div class="col-lg-3">
             <ul class="nav nav-pills flex-column" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link" id="act-{{i}}" href="#t3body-{{act.iCodAct}}" aria-controls="t3body-{{act.iCodAct}}" role="tab" data-toggle="tab">
+                    <a class="nav-link" id="act-{{i}}" href="#act-desc-{{i}}" aria-controls="act-desc-{{i}}" role="tab" data-toggle="tab">
                         <i class="fa fa-pencil"></i> 
                         <span>{{act.sNamAct}}</span>
                     </a>
@@ -88,7 +88,7 @@
 
         <div class="col-lg-9">
             <div class="tab-content">
-                <div role="tabpanel" class="tab-pane fade show" id="t3body-{{act.iCodAct}}">
+                <div role="tabpanel" class="tab-pane fade show" id="act-desc-{{i}}">
                     <p>{{act.sDesAct}}</p>
                 </div>
             </div>
