fix show class css

--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -88,7 +88,7 @@
 
         <div class="col-lg-9">
             <div class="tab-content">
-                <div role="tabpanel" class="tab-pane fade show" id="act-desc-{{i}}">
+                <div role="tabpanel" class="tab-pane fade" id="act-desc-{{i}}">
                     <p>{{act.sDesAct}}</p>
                 </div>
             </div>
