--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -92,6 +92,7 @@
                     <p>{{act.sDesAct}}</p>
                 </div>
             </div>
+            <button type="button" class="btn btn-success mt-20" (click)="accomplishTask(act.iCodAct)">Concluir</button>
         </div>
     </div>
 </section>
